syntax = "proto3";

option java_multiple_files = true;
option java_package = "plane.control";
option java_outer_classname = "DhingyInternalRPC";
option objc_class_prefix = "HLW";

service DhingyInternal {
  rpc appendEntries (AppendEntriesInput) returns (AppendEntriesOutput) {}
  rpc RequestVote (RequestVoteInput) returns (RequestVoteOutput) {}
}

message AppendEntriesInput {
  int32 term = 1;
  string leaderId = 2;
  int32 prevLogIndex = 3;
  int32 prevLogTerm = 4;
  string key = 5;
  string value = 6;
  int32 leaderCommit = 7;
}

message AppendEntriesOutput {
  int32 term = 1;
  bool success = 2;
  string nodeId = 3;
}

message RequestVoteInput {
  int32 term = 1;
  string candidateId = 2;
  int32 lastLogIndex = 3;
  int32 lastLogTerm = 4;
}

message RequestVoteOutput {
  int32 term = 1;
  bool voteGranted = 2;
  string voterid = 3;
}
